# augmentator

./: README.md  pyproject.toml
augmentator/: kernel_filter.py  mixer.py  noise_injector.py  rotator.py  styler.py
augmentator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: color_transformer_test.py  copper_test.py  create_assets.py  eraser_test.py  fast_kernel_filter_test.py  flipper_test.py  kernel_filter_test.py  mixer_test.py  noise_injector_test.py  rotator_test.py  styler_test.py  translator_test.py
