[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "augmentator"
version = "0.0.1"
authors = [
  { name="Julius Ellermann", email="334social@gmail.com" },
  { name="Jan Philipp Zimmer", email="j.philippzimmer@gmx.de"}
]
description = "Library for Image Data Augmentation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNUv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Pinhio/augmentator"