[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "augmentator"
version = "0.0.1"
authors = [
  { name="Julius Ellermann", email="334social@gmail.com" },
  { name="Jan Philipp Zimmer", email="j.philippzimmer@gmx.de"}
]
description = "Library for Image Data Augmentation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNUv3 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tensorflow",
    "tensorflow_hub",
    "Pillow"
]

[project.urls]
"Homepage" = "https://github.com/Pinhio/augmentator"

[tool.setuptools.packages.find]
include = ["augmentator*"]
exclude = ["tests*"]